--- a/site-partie4/angular.json
+++ b/site-partie4/angular.json
@@ -1,6 +1,6 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
-  "version": 1, 
+  "version": 1,
   "newProjectRoot": "projects",
   "projects": {
     "site-partie4": {
@@ -123,6 +123,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "site-partie4"
+    }
+  },
+  "defaultProject": "site-partie4",
+  "cli": {
+    "analytics": "b221ae6d-fa83-49a7-974b-5dec72f97626"
+  }
 }
